--- a/components/index.html
+++ b/components/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 
     <title>Brackts</title>
 </head>
@@ -22,7 +22,7 @@
 
     <main>
         
-            <section>
+            <section class="vertical-center ">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -34,7 +34,7 @@
 
 
                         <div class="text-center profile">
-                            <img src="img/perfilfundo.png" alt="Profile" class="img-fluid">
+                            <img src="/img/perfilfundo.png" alt="Profile" class="img-fluid">
                             <h1 class="mt-3"><strong>Olá,</strong> Gustavo Mendes</h1>
 
 
@@ -44,9 +44,11 @@
                             </div>
 
                             <div class="text-center tes">
-                                <button class="btn btn-primary">
-                                    Próximo
-                                </button>
+                                <a href="/components/question.html">
+                                    <button class="btn btn-primary">
+                                        Próximo
+                                    </button>
+                                </a>
                             </div>
                         </div>
 
