--- a/components/question-three.html
+++ b/components/question-three.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="imagem/png" href="img/logo.png">
+    <link rel="icon" type="imagem/png" href="/img/logo.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/style/style.css">
 
-    <title>Question</title>
+    <title>Brackets - Question</title>
 </head>
 
 <body>
