--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,27 @@
     font-weight: bold;
 }
 
+/* PERFIL */
+
+.nav{
+    text-align: center;
+    place-items: center;
+    display: grid;
+}
+
+.nav img {
+    width: 60px;
+}
+
+.profi img {
+    border-radius: 50%;
+    width: 50%;
+}
+
+.bandeira {
+    width: 10%;
+    
+}
 
 /* ANIMATION */
 @keyframes go-back {
