Tela perfil concluída

--- a/components/profile.html
+++ b/components/profile.html
@@ -44,42 +44,53 @@
                     <div class="col-6">
                         <div class="description">
                             <h6>Gustavo Mendes</h6>
-                            <p> Viajando pelo mundo e sempre em busca de novas aventuras ✈️</p>
+                            <p> Viajando pelo mundo e sempre em busca de novas aventuras e novas diversões ✈️</p>
                         </div>
 
-                        <div class="mt-5">
-                            <h6>Quero viajar para</h6>
-                            <img src="/img/brasil.jpg" alt="Bandeira" class="bandeira">
-                            <img src="/img/hong.png" alt="Bandeira" class="bandeira">
-                            <img src="/img/chile.png" alt="Bandeira" class="bandeira">
+                        <div class="row mt-5">
+                            <div class="col">
+                                <h6>420</h6>
+                                <p>Postagens</p>
+                            </div>
+                            <div class="col">
+                                <h6>19</h6>
+                                <p>Viagens</p>
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-outline-secondary">Editar</button>
+                            </div>
                         </div>
+
+                        <div class="row">
+                            <div class="mt-5 col">
+                                <h6>Quero viajar para</h6>
+                                <img src="/img/portugal.jpg" alt="Bandeira" class="bandeira">
+                                <img src="/img/italia.png" alt="Bandeira" class="bandeira">
+
+                            </div>
+
+                            <div class="mt-5 col">
+                                <h6>Favoritos</h6>
+                                <img src="/img/brasil.jpg" alt="Bandeira" class="bandeira">
+                                <img src="/img/hong.png" alt="Bandeira" class="bandeira">
+                                <img src="/img/chile.png" alt="Bandeira" class="bandeira">
+                            </div>
+
+                        </div>
+
+
                     </div>
+
                     
-                    <div class="row mt-5">
-                        <div class="col">
-                            <h6>420</h6>
-                            <p>Postagens</p>
-                        </div>
-                        <div class="col">
-                            <h6>19</h6>
-                            <p>Viagens</p>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-outline-secondary">Editar perfil</button>
-                        </div>
-                    </div>
-               
+                    
             </div>
         </div>
-   
-
-
     
 
         <div class="container mt-5 border-bottom">
             <div class="row">
-                <div class="col">
-                    <h6>Favoritos </h6>
+                <div class="col border-bottom border-dark">
+                    <h6>Viagens </h6>
                 </div>
                 <div class="col">
                     <h6> Viagens planejadas </h6>
@@ -91,8 +102,85 @@
         </div>
 
 
-
     </main>
+
+
+    <section class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Havaí</h5>
+                            <p class="card-text">Outro lugar maravilhoso que deve ser incrível conhecer é o Havaí. O arquipélago que faz parte dos Estados Unidos é um
+                            destino exótico e paradisíaco que todo mundo sonha em conhecer, eu sou uma delas. Li o post da Giselle sobre o Havaí –
+                            Terra do Aloha que só me aguçou ainda mais a vontade! O relato dela é bem detalhado, com dicas de onde ficar e passeios
+                            para fazer. “A herança das erupções vulcânicas que criaram as ilhas esculpiu paredões rochosos deslumbrantes. </p>
+                            <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Bratislava</h5>
+                            <p class="card-text">Todo mundo que é leitor do blog sabe que amo um castelo . Talvez por amar história de príncipes e princesas toda vez
+                            que visito um eu fico imaginando como seria a vida por lá, os romances, conflitos, etc. No blog Turistando In li um
+                            relato muito legal da Juliana visitando o castelo de Bratislava. O edifício imponente que fica no alto da colina, com
+                            aquela vista maravilhosa da cidade e do Rio Danúbio atualmente abriga o Museu de História Nacional Eslocavo.</p>
+                            <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Machu Picchu</h5>
+                            <p class="card-text">Esse destino entrou na minha lista recentemente. Assistindo um documentário na TV sobre a cultura e os costumes peruanos
+                            fiquei intrigada e comecei a pesquisar mais sobre o destino. Acabei caindo no post da Juliana contando a experiência
+                            dela na cidade perdida de Machu Picchu. </p>
+                            <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Ilha de Páscoa</h5>
+                            <p class="card-text">Esse destino eu sempre tive muita vontade de visitar mas por motivos de logística nunca rolou. Já fui ao Chile e quis
+                            conhecer tanta coisa lá que quase eu decido ficar um mês todo! Como nosso tempo era curto, ficamos somente pela região
+                            de Santiago. Mas eu vi no blog das Chicas Lokas um post com o relato de dois dias de sol na Ilha de Páscoa e a vontade
+                            voltou com força total. Li o relato da Giselle que visitou a ilha e mostrou várias fotos. </p>
+                            <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <footer class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="nav text-center nav">
+                        <h6>Brackets</h6>
+                        <p>Todos os direitos reservados ©2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
