--- a/components/index.html
+++ b/components/index.html
@@ -38,7 +38,7 @@
                             <h1 class="mt-3"><strong>Olá,</strong> Gustavo Mendes</h1>
 
 
-                            <div class="text-start mt-3 sec">
+                            <div class="text-start mt-3 sec text-center">
                                 <p> Iremos te ajudar a ter a sua viagem dos sonhos,
                                 Preencha os campos a seguir para podermos te ajudar</p>
                             </div>
@@ -57,10 +57,11 @@
             </div>
         </section>
 
-        
-        
-
     </main>
+
+        <section>
+            
+        </section>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
