Página de resultado concluída

--- a/components/profile.html
+++ b/components/profile.html
@@ -18,7 +18,7 @@
 
 <body>
     
-    <header class="border">
+    <header class="border sticky-top head">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -89,13 +89,13 @@
 
         <div class="container mt-5 border-bottom">
             <div class="row">
-                <div class="col border-bottom border-dark">
+                <div class="col text-center">
                     <h6>Viagens </h6>
                 </div>
-                <div class="col">
+                <div class="col text-center">
                     <h6> Viagens planejadas </h6>
                 </div>
-                <div class="col">
+                <div class="col text-center">
                     <h6> Relatos de viagem</h6>
                 </div>
             </div>
