Criando tela de resultados

--- a/components/finally.html
+++ b/components/finally.html
@@ -79,7 +79,7 @@
                    <h6> Obaa</h6>
                     <p>Já temos um resultado para a sua viagem dos sonhos</p>
 
-                    <a href="">
+                    <a href="/components/results.html">
                         <button class="btn btn-primary">
                             Ver resultado
                         </button>
