--- a/components/profile.html
+++ b/components/profile.html
@@ -114,8 +114,7 @@
                             <h5 class="card-title">Havaí</h5>
                             <p class="card-text">Outro lugar maravilhoso que deve ser incrível conhecer é o Havaí. O arquipélago que faz parte dos Estados Unidos é um
                             destino exótico e paradisíaco que todo mundo sonha em conhecer, eu sou uma delas. Li o post da Giselle sobre o Havaí –
-                            Terra do Aloha que só me aguçou ainda mais a vontade! O relato dela é bem detalhado, com dicas de onde ficar e passeios
-                            para fazer. “A herança das erupções vulcânicas que criaram as ilhas esculpiu paredões rochosos deslumbrantes. </p>
+                            Terra do Aloha que só me aguçou ainda mais a vontade!  </p>
                             <a href="#" class="btn btn-primary">Ver detalhes</a>
                         </div>
                     </div>
@@ -126,8 +125,7 @@
                             <h5 class="card-title">Bratislava</h5>
                             <p class="card-text">Todo mundo que é leitor do blog sabe que amo um castelo . Talvez por amar história de príncipes e princesas toda vez
                             que visito um eu fico imaginando como seria a vida por lá, os romances, conflitos, etc. No blog Turistando In li um
-                            relato muito legal da Juliana visitando o castelo de Bratislava. O edifício imponente que fica no alto da colina, com
-                            aquela vista maravilhosa da cidade e do Rio Danúbio atualmente abriga o Museu de História Nacional Eslocavo.</p>
+                            relato muito legal da Juliana visitando o castelo de Bratislava. </p>
                             <a href="#" class="btn btn-primary">Ver detalhes</a>
                         </div>
                     </div>
@@ -144,8 +142,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Machu Picchu</h5>
                             <p class="card-text">Esse destino entrou na minha lista recentemente. Assistindo um documentário na TV sobre a cultura e os costumes peruanos
-                            fiquei intrigada e comecei a pesquisar mais sobre o destino. Acabei caindo no post da Juliana contando a experiência
-                            dela na cidade perdida de Machu Picchu. </p>
+                            fiquei intrigada e comecei a pesquisar mais sobre o destino. </p>
                             <a href="#" class="btn btn-primary">Ver detalhes</a>
                         </div>
                     </div>
@@ -156,17 +153,35 @@
                             <h5 class="card-title">Ilha de Páscoa</h5>
                             <p class="card-text">Esse destino eu sempre tive muita vontade de visitar mas por motivos de logística nunca rolou. Já fui ao Chile e quis
                             conhecer tanta coisa lá que quase eu decido ficar um mês todo! Como nosso tempo era curto, ficamos somente pela região
-                            de Santiago. Mas eu vi no blog das Chicas Lokas um post com o relato de dois dias de sol na Ilha de Páscoa e a vontade
-                            voltou com força total. Li o relato da Giselle que visitou a ilha e mostrou várias fotos. </p>
+                            de Santiago. </p>
                             <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55626.84494593309!2d-50.90148782160537!3d-29.379721624878663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951932427804321f%3A0xa71c25f081e5aea6!2sGramado%2C%20RS!5e0!3m2!1spt-BR!2sbr!4v1616692884038!5m2!1spt-BR!2sbr"
+                                width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Gramado</h5>
+                                <p class="card-text">Você planejou uma viagem para Gramado. Clique aqui para viasualizar e ver os status dela.</p>
+                                <button class="btn btn-primary"> Ver status </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        
     </section>
 
-
+    
 
 
     <footer class="mt-5">
