--- a/components/results.html
+++ b/components/results.html
@@ -69,7 +69,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h6 class="ha">Fizemos uma gráfico para você se programar melhor</h6>
+                    <h6 class="ha mb-5">Fizemos uma gráfico para você se programar melhor</h6>
+                    <img src="/img/grafico.jpeg" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -80,7 +81,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="text-center">
-                    <h6 class="ha">Conheça nossa comunidade e interaja com quem ja viajou</h6>
+                    <h6 class="ha mb-5">Conheça nossa comunidade e interaja com quem ja viajou</h6>
                 </div>
 
                 <div class="row mt-2">
@@ -106,7 +107,7 @@
                     </div>
 
                     <div class="col-4 text-center border">
-                        <img src="/img/davi.jpg" alt="" class="img-fluid">
+                        <img src="/img/perfilfundo.png" alt="" class="img-fluid">
                         <strong>
                             <p>Davi Evangelista</p>
                         </strong>
