--- a/components/profile.html
+++ b/components/profile.html
@@ -87,90 +87,61 @@
         </div>
     
 
-        <div class="container mt-5 border-bottom">
+        <div class="container mt-5">
             <div class="row">
+    
                 <div class="col text-center">
-                    <h6>Viagens </h6>
+                    <h6 class="border-b"> Viagens planejadas </h6>
                 </div>
                 <div class="col text-center">
-                    <h6> Viagens planejadas </h6>
-                </div>
-                <div class="col text-center">
-                    <h6> Relatos de viagem</h6>
+                    <h6 > Comunidade</h6>
                 </div>
             </div>
         </div>
 
 
-    </main>
-
-
-    <section class="mt-5">
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Havaí</h5>
-                            <p class="card-text">Outro lugar maravilhoso que deve ser incrível conhecer é o Havaí. O arquipélago que faz parte dos Estados Unidos é um
-                            destino exótico e paradisíaco que todo mundo sonha em conhecer, eu sou uma delas. Li o post da Giselle sobre o Havaí –
-                            Terra do Aloha que só me aguçou ainda mais a vontade!  </p>
-                            <a href="#" class="btn btn-primary">Ver detalhes</a>
+                <div class="col">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55626.84494593309!2d-50.90148782160537!3d-29.379721624878663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951932427804321f%3A0xa71c25f081e5aea6!2sGramado%2C%20RS!5e0!3m2!1spt-BR!2sbr!4v1616692884038!5m2!1spt-BR!2sbr"
+                                        width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Gramado</h5>
+                                        <p class="card-text">Você planejou uma viagem para Gramado. Clique aqui para viasualizar e ver os status
+                                            dela.</p>
+                                        <a href="results.html">
+                                            <button class="btn btn-primary"> Ver status </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Bratislava</h5>
-                            <p class="card-text">Todo mundo que é leitor do blog sabe que amo um castelo . Talvez por amar história de príncipes e princesas toda vez
-                            que visito um eu fico imaginando como seria a vida por lá, os romances, conflitos, etc. No blog Turistando In li um
-                            relato muito legal da Juliana visitando o castelo de Bratislava. </p>
-                            <a href="#" class="btn btn-primary">Ver detalhes</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Machu Picchu</h5>
-                            <p class="card-text">Esse destino entrou na minha lista recentemente. Assistindo um documentário na TV sobre a cultura e os costumes peruanos
-                            fiquei intrigada e comecei a pesquisar mais sobre o destino. </p>
-                            <a href="#" class="btn btn-primary">Ver detalhes</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Ilha de Páscoa</h5>
-                            <p class="card-text">Esse destino eu sempre tive muita vontade de visitar mas por motivos de logística nunca rolou. Já fui ao Chile e quis
-                            conhecer tanta coisa lá que quase eu decido ficar um mês todo! Como nosso tempo era curto, ficamos somente pela região
-                            de Santiago. </p>
-                            <a href="#" class="btn btn-primary">Ver detalhes</a>
-                        </div>
-                    </div>
                 </div>
 
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55626.84494593309!2d-50.90148782160537!3d-29.379721624878663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951932427804321f%3A0xa71c25f081e5aea6!2sGramado%2C%20RS!5e0!3m2!1spt-BR!2sbr!4v1616692884038!5m2!1spt-BR!2sbr"
-                                width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Gramado</h5>
-                                <p class="card-text">Você planejou uma viagem para Gramado. Clique aqui para viasualizar e ver os status dela.</p>
-                                <button class="btn btn-primary"> Ver status </button>
+
+                <div class="col">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58877.94879500004!2d-45.62115005727702!3d-22.733005935589134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc89cbf10d10bf%3A0x42ed1a032c8ae78f!2sCampos%20do%20Jord%C3%A3o%2C%20SP%2C%2012460-000!5e0!3m2!1spt-BR!2sbr!4v1616770268347!5m2!1spt-BR!2sbr"
+                                    width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Campos do jordão</h5>
+                                    <p class="card-text">Você planejou uma viagem para Campos do jordão. Clique aqui para viasualizar e ver os status
+                                        dela.</p>
+                                    <a href="results.html">
+                                        <button class="btn btn-primary"> Ver status </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -178,10 +149,12 @@
             </div>
         </div>
 
-        
-    </section>
+    
 
     
+
+    </main>
+
 
 
     <footer class="mt-5">
