--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,9 @@ h6 {
     font-size: 28px;
 }
 
-
+svg{
+    width: 50%;
+}
 
 
 /* ANIMATION */
@@ -109,3 +111,37 @@ h6 {
         transform: translateX(0);
     }
 }
+
+                                    svg#freepik_stories-traveling:not(.animated) .animable {
+                                        opacity: 0;
+                                    }
+                            
+                                    svg#freepik_stories-traveling.animated #freepik--Character--inject-19 {
+                                        animation: 1s 1 forwards ease-out lightSpeedRight;
+                                        animation-delay: 0s;
+                                    }
+                            
+                                    @keyframes lightSpeedRight {
+                                        from {
+                                            transform: translate3d(50%, 0, 0) skewX(-20deg);
+                                            opacity: 0;
+                                        }
+                            
+                                        60% {
+                                            transform: skewX(10deg);
+                                            opacity: 1;
+                                        }
+                            
+                                        80% {
+                                            transform: skewX(-2deg);
+                                        }
+                            
+                                        to {
+                                            opacity: 1;
+                                            transform: translate3d(0, 0, 0);
+                                        }
+                                    }
+                            
+                                    .animator-hidden {
+                                        display: none;
+                                    }
