:bookmark: Ajustando tela de resultados

--- a/components/question-three.html
+++ b/components/question-three.html
@@ -63,7 +63,7 @@
 
 
                         <div class="text-end tes mt-3">
-                            <a href="">
+                            <a href="finally.html">
                                 <button class="btn btn-primary">
                                     Próximo
                                 </button>
