--- a/components/profile.html
+++ b/components/profile.html
@@ -34,7 +34,8 @@
         <main>
         <div class="container mt-5">
             <div class="row">
-                
+
+                   
                     <div class="col-4 profi">
                         <div>
                             <img src="/img/perfilfundo.png" alt="Foto de Perfil">
@@ -99,6 +100,14 @@
             </div>
         </div>
 
+        <div class="text-center mt-5">
+            <a href="/components/index.html">
+                <button class="btn btn-primary">
+                    Programar nova viagem
+                </button>
+            </a>
+        </div>
+       
 
         <div class="container mt-5">
             <div class="row">
