--- a/components/location.html
+++ b/components/location.html
@@ -5,10 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="icon" type="imagem/png" href="/img/logo.png">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/style/style.css">
+
+    <title>Localidades</title>
 </head>
 
 <body>
+
+    <main class="location">
+        <div class="container text-center parent">
+
+            <div class="row">
+
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/fortaleza.png" alt="Imagem de fortaleza">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/florianopolis.png" alt="Imagem de florianopolis">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/portoAlegre.png" alt="Imagem de portoAlegre">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/salvador.png" alt="Imagem de salvador">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/saopaulo.png" alt="Imagem de saopaulo">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/madri.png" alt="Imagem de madri">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/cartagena.png" alt="Imagem de cartagena">
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/components/location2.html">
+                        <img src="/img/newyork.png" alt="Imagem de newyork">
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        </script>
 
 </body>
 
