--- a/components/location2.html
+++ b/components/location2.html
@@ -19,9 +19,16 @@
 <body>
 
     <main class="location2">
+        <div class="parent">
+            <div class="box w-25">
+                <img src="/img/madri.png" alt="Imagem de madri">
+            </div>
 
-
-
+            <div class="box" style="background-color: aqua;">
+                <p>Viaje para Madri, coneheça as melhores localizações na cidade, tenha sua viagem com o melhor roteiro
+                </p>
+            </div>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
