:bookmark: Criando Feed

--- a/components/ranking.html
+++ b/components/ranking.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/style/style.css">
 
 
-    <title>Brackets - Perfil </title>
+    <title>Brackets - Ranking </title>
 
     
 </head>
