--- a/components/index.html
+++ b/components/index.html
@@ -34,8 +34,8 @@
 
 
                         <div class="text-center profile">
-                            <img src="/img/perfilfundo.png" alt="Profile" class="img-fluid">
-                            <h1 class="mt-3"><strong>Olá,</strong> Gustavo Mendes</h1>
+                            <img src="/img/paula.png" alt="Profile" class="img-fluid">
+                            <h1 class="mt-3"><strong>Olá,</strong> Paula Cardoso</h1>
 
 
                             <div class="text-start mt-3 sec text-center">
